# mirimlang

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/mirim/: core.h  error.h  io.h  mirim.h  object.h  scanner.h
rsc/: teste.mr
src/example/: mirim.c
src/mirim/: error.c  io.c  mirim.c  scanner.c
